# ElectronCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
lib/: CMakeLists.txt
lib/MyLib/: CMakeLists.txt  MyClass.cpp  MyClass.h
ui/: index.html  main.js  package-lock.json  package.json  renderer.js  worker.js
